Consistency tweaks in preparation for translatewiki
* Make message keys lower case
* Make description more descriptive. "Commons" alone is not clear enough
* Fix MessagesDirs
* Add namemag key

Change-Id: I757320da7f14c7bca90773659f3b7c426b3fa515

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,7 +4,7 @@
       "WMDE"
     ]
   },
-  "moveToCommonsClient": "MoveToCommonsClient",
-  "moveToCommonsClient-desc": "Easy moving of files to Commons",
-  "moveToCommonsClient-text": "Move to Commons"
+  "movetocommonsclient": "MoveToCommonsClient",
+  "movetocommonsclient-desc": "Easy moving of files to Wikimedia Commons",
+  "movetocommonsclient-text": "Move to Wikimedia Commons"
 }
