Add BetaFeature Switch
Bug: T167257
Change-Id: Ia2be404f2605066d63b65d72920ddd1093fe44b5

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,5 +6,7 @@
 	},
 	"fileexporter": "FileExporter",
 	"fileexporter-desc": "Easy exporting of files to another wiki",
-	"fileexporter-text": "Export file"
+	"fileexporter-text": "Export file",
+	"fileexporter-beta-feature-message": "FileExporter",
+	"fileexporter-beta-feature-description": "Allows for easy exporting of files to another wiki."
 }
