--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,5 +6,7 @@
 	},
 	"fileexporter": "FileExporter",
 	"fileexporter-desc": "{{desc|name=FileExporter|url=https://www.mediawiki.org/wiki/Extension:FileExporter}}",
-	"fileexporter-text": "Text to be displayed on a button on a File page which will take the user to the import page on the configured wiki."
+	"fileexporter-text": "Text to be displayed on a button on a File page which will take the user to the import page on the configured wiki.",
+	"fileexporter-beta-feature-message": "Label for the FileExporter Beta Feature.",
+	"fileexporter-beta-feature-description": "Description for the FileExporter Beta Feature, describing the feature that will be enabled."
 }
