Custom export button labels for "Wikimedia Commons" and test wikis
When this is ok and merged, I23cf46e (T168406) can be reverted.

Bug: T195370
Bug: T196622
Change-Id: Ic9fce8eae0587cd1072ccc14c1bfdff09ce2b925

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,6 +7,8 @@
 	"fileexporter": "FileExporter",
 	"fileexporter-desc": "Easy exporting of files to another wiki",
 	"fileexporter-text": "Export file",
+	"fileexporter-to-wikimedia-commons": "Export to Wikimedia Commons",
+	"fileexporter-to-test": "Export to Test Wiki",
 	"fileexporter-beta-feature-message": "FileExporter",
 	"fileexporter-beta-feature-description": "Allows for easy exporting of files to another wiki."
 }
