Change beta feature desc text to be Commons specific
Bug: T196621
Change-Id: If802368a6d4717f28464f2706a02b7e2cd4a598b

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,5 +10,5 @@
 	"fileexporter-to-wikimedia-commons": "Export to Wikimedia Commons",
 	"fileexporter-to-test": "Export to Test Wiki",
 	"fileexporter-beta-feature-message": "FileExporter",
-	"fileexporter-beta-feature-description": "Allows for easy exporting of files to another wiki."
+	"fileexporter-beta-feature-description": "Allows for easy exporting of files to Wikimedia Commons."
 }
